Fix homepage solutions content overlap

--- a/wp-content/themes/Forsite/assets/styles/components/_cards.scss
+++ b/wp-content/themes/Forsite/assets/styles/components/_cards.scss
@@ -16,10 +16,16 @@
 }
 .brand-card__img {
     margin-bottom: 1rem;
+    position: relative;
+    z-index: 1;
 
     @include media-breakpoint-up(lg) {
         margin-bottom: 0;
     }
+}
+.brand-card__body {
+    position: relative;
+    z-index: 2;
 }
 .brand-card__content {
     @include media-breakpoint-up(lg) {
